# control-gastos

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  tasks.md
.github/workflows/: ci.yml
.specify/: 00-principles.md  01-architecture-vision.md  02-business-architecture.md  03-information-systems-architecture.md  04-technology-architecture.md  05-opportunities-and-solutions.md  requirements.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ff66bfa5c79_add_sender_whitelist_and_dedup_fields.py  a1b2c3d4e5f6_add_email_metadata_to_movements.py  fea701f53aa0_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  category.py  movement.py  movement_tag.py  processed_email.py  sender_whitelist.py  tag.py
backend/app/routers/: auth.py  categories.py  emails.py  health.py  movements.py  senders.py  tags.py
backend/app/schemas/: category.py  movement.py  sender.py  tag.py
backend/app/services/: analyzer.py  dedup.py  gmail.py  pipeline.py
backend/tests/: conftest.py  test_analyzer.py  test_auth.py  test_dedup.py  test_gmail_service.py  test_health.py  test_pipeline.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/categories/: page.tsx
frontend/app/tags/: page.tsx
frontend/components/: BottomNav.tsx  ConfirmDialog.tsx  DuplicateGroup.tsx  EditMovementModal.tsx  MovementCard.tsx
frontend/lib/: api.ts  types.ts
frontend/public/: manifest.json
(+2 files in other folders)
